--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         content="Zone Posters - Discover the latest Free Fire posters, event banners, and news from all regions.">
     <meta name="keywords"
         content="free fire, free fire posters, free fire banners, free fire events, free fire news, garena free fire, free fire official, free fire vietnam, free fire brazil, free fire india">
-    <meta name="author" content="Free Fire Elite Portal">
+    <meta name="author" content="Zone Posters">
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://zoneposters.vercel.app/" />
 
