--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Zone Posters - Discover the latest Free Fire posters, event banners, and news from all regions.">
     <meta name="keywords"
         content="free fire, free fire posters, free fire banners, free fire events, free fire news, garena free fire, free fire official, free fire vietnam, free fire brazil, free fire india">
-    <meta name="author" content="Free Fire Elite Portal">
+    <meta name="author" content="Zone Posters">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://zoneposters.vercel.app/" />
 
@@ -22,17 +22,17 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zoneposters.vercel.app/">
-    <meta property="og:title" content="Free Fire Posters - Official Banners & News">
+    <meta property="og:title" content="Zone Posters - Official Banners & News">
     <meta property="og:description"
         content="Discover the latest Free Fire posters, event banners, and news from all regions. Your ultimate Free Fire media hub.">
     <meta property="og:image" content="https://zoneposters.vercel.app/assets/image/LOGO_FF_SHORT.png">
-    <meta property="og:site_name" content="Free Fire Elite Portal">
+    <meta property="og:site_name" content="Zone Posters">
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="vi_VN">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://zoneposters.vercel.app/">
-    <meta name="twitter:title" content="Free Fire Posters - Official Banners & News">
+    <meta name="twitter:title" content="Zone Posters - Official Banners & News">
     <meta name="twitter:description"
         content="Discover the latest Free Fire posters, event banners, and news from all regions.">
     <meta name="twitter:image" content="https://zoneposters.vercel.app/assets/image/LOGO_FF_SHORT.png">
@@ -58,13 +58,15 @@
     <!-- Preload Critical Assets -->
     <link rel="preload" href="/assets/fonts/Exo-SemiBold.ttf" as="font" type="font/truetype" crossorigin>
     <link rel="preload" href="/assets/image/LOGO_FF_SHORT.png" as="image">
+    <!-- Preload Lottie Player for Welcome Animation -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" as="script">
 
     <link rel="stylesheet" href="/assets/css/style.css?v=3.5.1">
 </head>
 
 <body>
     <div id="loading-screen">
-        <img src="/assets/image/LOGO_FF_SHORT.png" alt="Loading..." class="loading-logo">
+        <div id="lottie-welcome" style="width: 200px; height: 200px;"></div>
     </div>
 
     <a href="#main-content" class="skip-to-content" style="position: absolute; left: -9999px; z-index: 999;"
@@ -72,8 +74,8 @@
 
     <header class="header" role="banner">
         <div class="logo">
-            <a href="/" aria-label="Free Fire Posters Homepage">
-                <img src="/assets/image/LOGO_FF_SHORT.png" alt="Free Fire Logo" width="35" height="35">
+            <a href="/" aria-label="Zone Posters Homepage">
+                <img src="/assets/image/LOGO_FF_SHORT.png" alt="Zone Posters Logo" width="35" height="35">
             </a>
         </div>
 
@@ -205,13 +207,13 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Free Fire Elite Portal",
+        "name": "Zone Posters",
         "alternateName": "Free Fire Posters",
         "url": "https://zoneposters.vercel.app/",
         "description": "Official Free Fire posters, event banners, and news from all regions worldwide.",
         "publisher": {
             "@type": "Organization",
-            "name": "Free Fire Elite Portal",
+            "name": "Zone Posters",
             "logo": {
                 "@type": "ImageObject",
                 "url": "https://zoneposters.vercel.app/assets/image/LOGO_FF_SHORT.png"
