--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://unpkg.com/@imagekit/javascript/dist/imagekit.min.js" defer></script>
     <script src="/assets/js/script.js?v=3.5.1" defer></script>
