--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body>
     <div id="loading-screen">
-        <div id="lottie-welcome" style="width: 200px; height: 200px;"></div>
+        <div id="lottie-welcome"></div>
     </div>
 
     <a href="#main-content" class="skip-to-content" style="position: absolute; left: -9999px; z-index: 999;"
