--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="vKpEfaaix3tyf3KNuLOD4z3LE4K1_5RnaU_lwqDOD9U" />
 
-    <title>Zone Posters</title>
-    <meta name="title" content="Zone Posters">
+    <title>Zone Posters - Free Fire Fan Gallery</title>
+    <meta name="title" content="Zone Posters - Free Fire Fan Gallery">
     <meta name="description"
-        content="Zone Posters - Discover the latest Free Fire posters, event banners, and news from all regions.">
+        content="Zone Posters - Discover the latest Free Fire posters, event banners, and news from all regions. Unofficial fan-made media gallery.">
     <meta name="keywords"
         content="free fire, free fire posters, free fire banners, free fire events, free fire news, garena free fire, free fire official, free fire vietnam, free fire brazil, free fire india">
     <meta name="author" content="Free Fire Elite Portal">
@@ -22,9 +22,9 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zoneposters.vercel.app/">
-    <meta property="og:title" content="Free Fire Posters - Official Banners & News">
+    <meta property="og:title" content="Free Fire Posters - Unofficial Fan Gallery">
     <meta property="og:description"
-        content="Discover the latest Free Fire posters, event banners, and news from all regions. Your ultimate Free Fire media hub.">
+        content="Discover the latest Free Fire posters, event banners, and news from all regions. Your ultimate fan-made Free Fire media hub.">
     <meta property="og:image" content="https://zoneposters.vercel.app/assets/image/LOGO_FF_SHORT.png">
     <meta property="og:site_name" content="Free Fire Elite Portal">
     <meta property="og:locale" content="en_US">
@@ -32,9 +32,9 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://zoneposters.vercel.app/">
-    <meta name="twitter:title" content="Free Fire Posters - Official Banners & News">
+    <meta name="twitter:title" content="Free Fire Posters - Unofficial Fan Gallery">
     <meta name="twitter:description"
-        content="Discover the latest Free Fire posters, event banners, and news from all regions.">
+        content="Discover the latest Free Fire posters, event banners, and news from all regions. Unofficial fan site.">
     <meta name="twitter:image" content="https://zoneposters.vercel.app/assets/image/LOGO_FF_SHORT.png">
 
     <link rel="icon" type="image/png" href="/assets/image/LOGO_FF_SHORT.png" />
@@ -143,7 +143,7 @@
                 <!-- SEO Hidden Heading -->
                 <h1
                     style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); border: 0;">
-                    Zone Posters - Official Free Fire Media Gallery & News</h1>
+                    Zone Posters - Unofficial Free Fire Media Gallery & News</h1>
             </div>
         </section>
 
@@ -206,9 +206,9 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Free Fire Elite Portal",
-        "alternateName": "Free Fire Posters",
+        "alternateName": "Free Fire Posters Fan Gallery",
         "url": "https://zoneposters.vercel.app/",
-        "description": "Official Free Fire posters, event banners, and news from all regions worldwide.",
+        "description": "Unofficial Free Fire posters, event banners, and news from all regions worldwide.",
         "publisher": {
             "@type": "Organization",
             "name": "Free Fire Elite Portal",
@@ -229,8 +229,8 @@
         <div class="footer-content">
             <p>&copy; 2026 Zone Posters. All rights reserved.</p>
             <p class="trademark-disclaimer" style="font-size: 0.8rem; color: #888; margin-top: 5px;">Free Fire is a
-                registered trademark of Garena. This site is a fan-made community gallery and is not affiliated with
-                Garena.</p>
+                registered trademark of Garena. This site is a fan-made community gallery and is NOT affiliated with,
+                endorsed by, or sponsored by Garena.</p>
         </div>
     </footer>
 
